--- a/content/posts/200503_egu.md
+++ b/content/posts/200503_egu.md
@@ -1,5 +1,5 @@
 ---
-title: EGU 2020
+title: Upcoming EGU 2020
 featured_image: "images/egu2020.png"
 feat_image_credit: "egu.eu"
 omit_header_text: true
@@ -8,7 +8,6 @@ type: page
 menu: 
 
 ---
-
 
 Topic: Consistency of observed sea surface height changes, bottom pressure changes and temperature, salinity variations in a South Atlantic transect of the Antarctic Circumpolar Current  
 
